template.yaml
---
# Source: firstchart/charts/tomcat/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: release-name-tomcat
  namespace: "default"
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: tomcat
    app.kubernetes.io/version: 11.0.15
    helm.sh/chart: tomcat-13.3.0
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/name: tomcat
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 8080
          protocol: TCP
---
# Source: firstchart/charts/tomcat/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-tomcat
  namespace: default
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: tomcat
    app.kubernetes.io/version: 11.0.15
    helm.sh/chart: tomcat-13.3.0
spec:
  type: LoadBalancer
  externalTrafficPolicy: "Cluster"
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30007
  selector:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: tomcat
---
# Source: firstchart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-firstchart
  namespace: "default"
  labels:
    helm.sh/chart: firstchart-0.1.0
    app.kubernetes.io/name: firstchart
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: firstchart
    app.kubernetes.io/instance: release-name
---
# Source: firstchart/charts/tomcat/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-tomcat
  namespace: default
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: tomcat
    app.kubernetes.io/version: 11.0.15
    helm.sh/chart: tomcat-13.3.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/name: tomcat
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: tomcat
        app.kubernetes.io/version: 11.0.15
        helm.sh/chart: tomcat-13.3.0
    spec:      
      automountServiceAccountToken: false
      affinity:
        podAffinity:          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: release-name
                    app.kubernetes.io/name: tomcat
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:     
      serviceAccountName: release-name-tomcat
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: tomcat
          image: registry-1.docker.io/bitnami/tomcat:latest
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            tcpSocket:
              port: http
            failureThreshold: 6
            initialDelaySeconds: 120
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 3
          resources:
            limits:
              cpu: 380m
              ephemeral-storage: 2Gi
              memory: 384Mi
            requests:
              cpu: 250m
              ephemeral-storage: 50Mi
              memory: 256Mi
          volumeMounts:
            - name: data
              mountPath: /bitnami/tomcat
            - name: empty-dir
              mountPath: /opt/bitnami/tomcat/temp
              subPath: app-tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/tomcat/conf
              subPath: app-conf-dir
            - name: empty-dir
              mountPath: /opt/bitnami/tomcat/logs
              subPath: app-logs-dir
            - name: empty-dir
              mountPath: /opt/bitnami/tomcat/work
              subPath: app-work-dir
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: tomcat-secrets
              mountPath: /opt/bitnami/tomcat/secrets
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: tomcat-secrets
          projected:
            sources:
              - secret:
                  name: release-name-tomcat
        - name: data
          persistentVolumeClaim:
            claimName: release-name-tomcat
---
# Source: firstchart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-firstchart
  namespace: "default"
  labels:
    helm.sh/chart: firstchart-0.1.0
    app.kubernetes.io/name: firstchart
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: firstchart
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        helm.sh/chart: firstchart-0.1.0
        app.kubernetes.io/name: firstchart
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: release-name-firstchart
      containers:
        - name: firstchart
          image: "nginx:1.16.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
